# sky-atmosphere-analyzer

./: .dockerignore  .gitignore  README.md  docker-compose.yml
assets/: taxonomy.md
assets/dataset/: README.md
assets/dataset/images/train/: dataset.yaml
client/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  vite.config.ts
client/src/: App.tsx
client/src/components/layout/: dashboard-layout.tsx
client/src/components/ui/: breadcrumb.tsx
client/src/routes/: index.tsx
client/src/routes/ResultsPage/: ResultsPage.tsx
client/src/routes/UploadPage/: UploadPage.tsx
client/src/services/: api.ts
server/: .env.example  Dockerfile  README.md  pyproject.toml
server/src/app/: main.py  train.py
server/src/app/handlers/: analyze.py  history.py
server/src/app/models/: taxonomy.py  yolo_model.py
server/src/app/services/: storage.py
server/src/app/utils/: config.py  singleton.py  validation.py
server/tests/: conftest.py  test_storage.py  test_taxonomy.py  test_validation.py
